Improve wsgi support.
Now has root url "Directory", and "file urls" below this for advertized calendars.

--- a/examples/etc/example.conf
+++ b/examples/etc/example.conf
@@ -7,3 +7,6 @@ template-dir = /path/to/email-templates/
 recipient = some-email-list@example.com
 sender = me@example.com
 subject = Example email subject
+
+[wsgi]
+# Optional; only used for serving previews over wsgi.
