Read calendar conf on WSGI startup, log according to WSGI conf.

--- a/examples/etc/example.conf
+++ b/examples/etc/example.conf
@@ -10,3 +10,6 @@ subject = Example email subject
 
 [wsgi]
 # Optional; only used for serving previews over wsgi.
+wsgi_calendars = example #, example2, example3, ...
+loglevel = error # or debug, info, warning(default), error, critical
+loglevel = /path/to/logfile.txt # default is wsgi.error (server errorlog)
